# nerd-dictation

./: .gitignore  nerd-dictation  pyproject.toml  readme.rst
package/: readme.rst
package/uv/: hatch_build.py  pyproject.toml  readme.rst
package/uv/src/nerd_dictation/: __init__.py
src/nerd_dictation/: __init__.py  __main__.py
