[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nerd-dictation"
version = "0.2.0"
description = "Offline Speech to Text for Desktop"
readme = "readme.rst"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
maintainers = [
    {name = "Campbell Barton", email = "ideasman42@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "vosk",
]

[project.scripts]
nerd-dictation = "nerd_dictation:main"

[project.urls]
Repository = "https://github.com/ideasman42/nerd-dictation"

[tool.hatch.build.targets.wheel]
packages = ["src/nerd_dictation"]

[tool.black]
line-length = 119
target-version = ['py310']
